--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css");
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -8,7 +9,67 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.App {
+  max-width: 360px;
+  margin: 32px auto;
+  background-color: #eceff1;
+}
+
+.title-bar {
+  background-color: #9ea7aa;
+  height: 56px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 16px;
+}
+
+.branding {
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  background-color: #cfd8dc;
+  margin: 0;
+  padding: 16px 0;
+}
+
+.navbar li {
+  display: inline-block;
+}
+
+.todolist {
+  padding: 24px 16px;
+}
+
+.todolist input {
+  width: 100%;
+  padding: 12px 16px;
+  border: 1px solid #cfd8dc;
+  border-radius: 4px;
+}
+
+.todolist ul {
+  padding-left: 0;
+}
+
+.todolist li {
+  list-style: none;
+  width: 100%;
+  padding: 12px 16px;
+  border-radius: 4px;
+  background-color: #cfd8dc;
+  margin-bottom: 16px;
 }
