--- a/src/index.css
+++ b/src/index.css
@@ -21,11 +21,11 @@ code {
 .App {
   max-width: 360px;
   margin: 32px auto;
-  background-color: #eceff1;
+  /* background-color: #eceff1; */
 }
 
 .title-bar {
-  background-color: #9ea7aa;
+  /* background-color: #9ea7aa; */
   height: 56px;
   display: flex;
   align-items: center;
@@ -41,7 +41,7 @@ code {
 .navbar {
   display: flex;
   justify-content: space-around;
-  background-color: #cfd8dc;
+  /* background-color: #cfd8dc; */
   margin: 0;
   padding: 16px 0;
 }
@@ -70,6 +70,6 @@ code {
   width: 100%;
   padding: 12px 16px;
   border-radius: 4px;
-  background-color: #cfd8dc;
+  /* background-color: #cfd8dc; */
   margin-bottom: 16px;
 }
