--- a/src/index.css
+++ b/src/index.css
@@ -72,4 +72,7 @@ code {
   border-radius: 4px;
   /* background-color: #cfd8dc; */
   margin-bottom: 16px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row-reverse;
 }
